--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -17,11 +17,31 @@ h1 {
     background-color: #fff;
     border: 4px solid #97b3ba;
     border-radius: 4px;
-    width: 650px;
-    height: 570px;
+    width: 500px;
+    height: 500px;
 }
 
-.grid {
+.square {
     border: 1px solid #e1e2e3;
     box-sizing: border-box;
+}
+
+.square-mouseover {
+    background-color: #cc2424;
+}
+
+.btn {
+    background-color: #fff;
+    color: #23242a;
+    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+    font-size: 14px;
+    font-weight: 600;
+    margin: 15px;
+    padding: 8px 15px;
+    border: 1px solid #23242a;
+    border-radius: 6px;
+}
+
+.btn:hover {
+    background-color: #f2f2f2;
 }
